--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ destination: docs
 
 
 # If you are building a simple GitHub user page (http://username.github.io) then use these settings:
-url: "http://username.github.io"
-baseurl: ""
+url: "http://raffaweb.github.io"
+baseurl: "/sensori"
 
 # If you are building a GitHub project page then use these settings:
 #url: "http://username.github.io/projectname"
