--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ destination: docs
 
 
 # If you are building a simple GitHub user page (http://username.github.io) then use these settings:
-url: "http://raffaweb.github.io"
+url: "http://raffaweb.github.io/sensori"
 baseurl: "/sensori"
 
 # If you are building a GitHub project page then use these settings:
