'inseriti grafici hardware e software'

--- a/_config.yml
+++ b/_config.yml
@@ -220,5 +220,10 @@ plugins:
   - jekyll-paginate
   - jekyll-sitemap
 
+
+
+mermaid:
+  src: 'path/to/mermaid.js'
+
 # Beautiful Jekyll / Dean Attali
 # 2fc73a3a967e97599c9763d05e564189
